Fehler werden sortiert (1. Fehler 1.Spalte)

--- a/Paul/Backup/Paul_Test.ipynb
+++ b/Paul/Backup/Paul_Test.ipynb
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-12-10 14:46:07.935304: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2023-12-10 21:43:10.103124: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: SSE4.1 SSE4.2, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -136,7 +136,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_88516/2484051613.py:63: UserWarning: Tight layout not applied. tight_layout cannot make axes height small enough to accommodate all axes decorations.\n",
+      "/tmp/ipykernel_93804/2484051613.py:63: UserWarning: Tight layout not applied. tight_layout cannot make axes height small enough to accommodate all axes decorations.\n",
       "  plt.tight_layout()  # Platzierung der Subplots\n"
      ]
     },
@@ -164,10 +164,10 @@
     "for datei in os.listdir(RELPATH):\n",
     "    filePath = RELPATH + datei\n",
     "\n",
-    "    print('Look, i found a file: ' + filePath)\n",
+    "    #print('Look, i found a file: ' + filePath)\n",
     "    number = re.search(r'\\d+', datei).group()\n",
     "    column_index = int(number) - 1  # Index in Python beginnt bei 0\n",
-    "    print(column_index)\n",
+    "    #print(column_index)\n",
     "\n",
     "    if 'te' in datei:\n",
     "        with open(filePath, 'r') as file:\n",
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7a04c492-12a4-48bf-9c07-a33fb7d93a3e",
    "metadata": {},
    "outputs": [
@@ -238,96 +238,6 @@
    "source": [
     "print(matrix_data.shape)\n",
     "print(matrix_data.dtype)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "c465a7bf-bba9-4c59-a62b-82af2fea2fea",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[[2.5025e-01 3.6572e+03 4.5201e+03 ... 4.7459e+01 4.1841e+01 1.8049e+01]\n",
-      "  [2.5135e-01 3.6621e+03 4.5323e+03 ... 4.7403e+01 4.1188e+01 1.8008e+01]\n",
-      "  [2.5045e-01 3.6819e+03 4.4936e+03 ... 4.7265e+01 4.1290e+01 1.8009e+01]\n",
-      "  ...\n",
-      "  [7.5920e-01 3.6255e+03 4.5012e+03 ... 6.4318e+01 4.0789e+01 1.7699e+01]\n",
-      "  [7.8204e-01 3.6340e+03 4.5081e+03 ... 6.4357e+01 4.1169e+01 1.9572e+01]\n",
-      "  [7.8337e-01 3.6489e+03 4.5328e+03 ... 6.4556e+01 4.0861e+01 1.5280e+01]]\n",
-      "\n",
-      " [[2.5054e-01 3.6823e+03 4.5529e+03 ... 4.7500e+01 4.1234e+01 1.9604e+01]\n",
-      "  [2.4945e-01 3.6683e+03 4.5585e+03 ... 4.7666e+01 4.1197e+01 1.7827e+01]\n",
-      "  [2.4937e-01 3.6593e+03 4.4645e+03 ... 4.7579e+01 4.1495e+01 1.9826e+01]\n",
-      "  ...\n",
-      "  [2.6026e-01 3.6707e+03 4.6764e+03 ... 2.1951e+01 4.1482e+01 1.9546e+01]\n",
-      "  [2.5254e-01 3.6787e+03 4.6521e+03 ... 2.1732e+01 4.1449e+01 2.0224e+01]\n",
-      "  [2.5200e-01 3.6749e+03 4.6809e+03 ... 2.1677e+01 4.0849e+01 1.5360e+01]]\n",
-      "\n",
-      " [[2.5103e-01 3.6309e+03 4.5340e+03 ... 4.7338e+01 4.1219e+01 1.6837e+01]\n",
-      "  [2.4927e-01 3.6418e+03 4.5339e+03 ... 4.7585e+01 4.0614e+01 1.6396e+01]\n",
-      "  [2.5184e-01 3.6646e+03 4.4870e+03 ... 4.7393e+01 4.1657e+01 1.8721e+01]\n",
-      "  ...\n",
-      "  [2.6180e-01 3.6968e+03 4.4912e+03 ... 5.0770e+01 4.1627e+01 1.7803e+01]\n",
-      "  [2.7649e-01 3.6628e+03 4.5003e+03 ... 5.0837e+01 3.9971e+01 1.8585e+01]\n",
-      "  [2.7408e-01 3.6573e+03 4.4675e+03 ... 5.0641e+01 4.0999e+01 1.9693e+01]]\n",
-      "\n",
-      " ...\n",
-      "\n",
-      " [[2.5266e-01 3.6687e+03 4.4790e+03 ... 4.7504e+01 4.0929e+01 1.9856e+01]\n",
-      "  [2.5077e-01 3.6345e+03 4.5204e+03 ... 4.7334e+01 4.1070e+01 1.7167e+01]\n",
-      "  [2.4910e-01 3.6684e+03 4.5386e+03 ... 4.7436e+01 4.1281e+01 1.8356e+01]\n",
-      "  ...\n",
-      "  [2.5692e-01 3.6624e+03 4.5217e+03 ... 4.6708e+01 4.1605e+01 1.7813e+01]\n",
-      "  [2.4478e-01 3.6941e+03 4.5022e+03 ... 4.6720e+01 4.1727e+01 1.7987e+01]\n",
-      "  [2.4590e-01 3.6815e+03 4.5083e+03 ... 4.6674e+01 4.2266e+01 1.7402e+01]]\n",
-      "\n",
-      " [[2.4963e-01 3.6425e+03 4.5259e+03 ... 4.7457e+01 4.0654e+01 1.7559e+01]\n",
-      "  [2.4977e-01 3.6846e+03 4.5215e+03 ... 4.7307e+01 4.0319e+01 1.7289e+01]\n",
-      "  [2.4840e-01 3.6873e+03 4.5269e+03 ... 4.7417e+01 4.1718e+01 1.9025e+01]\n",
-      "  ...\n",
-      "  [2.4694e-01 3.6565e+03 4.4797e+03 ... 4.6800e+01 4.0667e+01 2.0843e+01]\n",
-      "  [2.7570e-01 3.6607e+03 4.5305e+03 ... 4.7049e+01 4.0594e+01 2.0339e+01]\n",
-      "  [2.7481e-01 3.6853e+03 4.5067e+03 ... 4.7001e+01 4.1615e+01 1.7293e+01]]\n",
-      "\n",
-      " [[2.4988e-01 3.6878e+03 4.4929e+03 ... 4.7370e+01 4.1290e+01 1.9438e+01]\n",
-      "  [2.5154e-01 3.6456e+03 4.5298e+03 ... 4.7319e+01 4.0844e+01 1.7766e+01]\n",
-      "  [2.5139e-01 3.6622e+03 4.4731e+03 ... 4.7428e+01 4.1536e+01 1.7091e+01]\n",
-      "  ...\n",
-      "  [2.0527e-01 3.6257e+03 4.4740e+03 ... 3.0616e+01 4.0997e+01 1.4843e+01]\n",
-      "  [2.3677e-01 3.6645e+03 4.5268e+03 ... 3.0466e+01 4.1234e+01 1.8443e+01]\n",
-      "  [2.3621e-01 3.6441e+03 4.4964e+03 ... 3.0367e+01 4.1004e+01 1.7714e+01]]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(matrix_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "79e905dc-1c08-4fea-a274-b70de08aece9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Minimum: -0.58124\n",
-      "Maximum: 4984.6\n",
-      "Durchschnitt: 360.7211875108043\n",
-      "Standardabweichung: 994.914686045516\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Minimum:\", np.min(matrix_data))\n",
-    "print(\"Maximum:\", np.max(matrix_data))\n",
-    "print(\"Durchschnitt:\", np.mean(matrix_data))\n",
-    "print(\"Standardabweichung:\", np.std(matrix_data))\n"
    ]
   },
   {
